--- a/config.yml
+++ b/config.yml
@@ -126,3 +126,17 @@ presets:
             
             Response: 
             
+# [OPTIONAL] Whisper.cpp control section, requires only to recognize speech from video
+whisper:
+    ffmpeg:
+        Windows: "C:\\Program Files\\ffmpeg\\bin\\ffmpeg.exe"
+        Linux: "/util/ffmpeg/bin/ffmpeg"
+    executable:
+        Windows: "C:\\Users\\andrey.vukolov\\src\\whisper.cpp\\main.exe"
+        Linux: "/home/twdragon/src/whisper.cpp/build/bin/whisper-cli"
+    model_dir:
+        Windows: "F:\\twdragon\\src\\whisper.cpp\\models\\large"
+        # Windows: "F:\\twdragon\\src\\whisper.cpp\\models\\base"
+        Linux: "/home/twdragon/src/whisper.cpp/models/large"
+    model_filename: "ggml-large-v3.bin"
+    # model_filename: "ggml-base.bin"
