Added Markdown sanitizer
- Added list sanitizer for Markdown
- Created state-of-the-art HTML renderer
- Implemented video frame preview generator

Signed-off-by: Andrey Vukolov <andrey.vukolov@elettra.eu>

--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@ server_executable:
     Windows: "C:\\Users\\andrey.vukolov\\src\\llama.cpp\\llama-server.exe"
     Linux: "/home/twdragon/src/llama.cpp/build/bin/llama-server"
 llm_dir:
-    Windows: "F:\\twdragon\\src\\llama.cpp\\models"
+    Windows: "C:\\Users\\andrey.vukolov\\src\\llama.cpp\\models"
     Linux: "/home/twdragon/src/llama.cpp/models"
 # llm_filename: "Ministral-8B-Instruct-2410-Q4_K_L.gguf"
 llm_filename: "Ministral-8B-Instruct-2410.Q5_K_M.gguf"
@@ -184,9 +184,9 @@ whisper:
         Windows: "C:\\Users\\andrey.vukolov\\src\\whisper.cpp\\whisper-cli.exe"
         Linux: "/home/twdragon/src/whisper.cpp/build/bin/whisper-cli"
     model_dir:
-        Windows: "C:\\Users\\andrey.vukolov\\src\\whisper.cpp\\models\\large"
-        # Windows: "F:\\twdragon\\src\\whisper.cpp\\models\\base"
-        # Linux: "/home/twdragon/src/whisper.cpp/models/base"
+        Windows: "C:\\Users\\andrey.vukolov\\src\\whisper.cpp\\models\\medium"
+        # Windows: "F:\\twdragon\\src\\whisper.cpp\\models\\large"
+        # Linux: "/home/twdragon/src/whisper.cpp/models/medium"
         Linux: "/home/twdragon/src/whisper.cpp/models/large"
-    model_filename: "ggml-large-v3.bin"
-    # model_filename: "ggml-base.bin"
+    # model_filename: "ggml-large-v3.bin"
+    model_filename: "ggml-medium.bin"
