--- a/config.yml
+++ b/config.yml
@@ -184,9 +184,9 @@ whisper:
         Windows: "C:\\Users\\andrey.vukolov\\src\\whisper.cpp\\whisper-cli.exe"
         Linux: "/home/twdragon/src/whisper.cpp/build/bin/whisper-cli"
     model_dir:
-        Windows: "C:\\Users\\andrey.vukolov\\src\\whisper.cpp\\models\\medium"
+        Windows: "C:\\Users\\andrey.vukolov\\src\\whisper.cpp\\models\\large"
         # Windows: "F:\\twdragon\\src\\whisper.cpp\\models\\large"
         # Linux: "/home/twdragon/src/whisper.cpp/models/medium"
         Linux: "/home/twdragon/src/whisper.cpp/models/large"
-    # model_filename: "ggml-large-v3.bin"
-    model_filename: "ggml-medium.bin"
+    model_filename: "ggml-large-v3.bin"
+    # model_filename: "ggml-medium.bin"
